# DSA

./: .gitignore  Cargo.toml  Makefile  README.md  SUMMARY.md  book.toml  build.zig  build.zig.zon  doc.sh  main.rs
Data Structures/: Readme.md
Data Structures/Arrays:Lists:Tuple/: Readme.md
Data Structures/Arrays:Lists:Tuples/Arrays/: Readme.md  reverse.py
Data Structures/Arrays:Lists:Tuples:Vectors/: Readme.md
Data Structures/Arrays:Lists:Tuples:Vectors/Lists/: list_comprehension.py
Data Structures/Arrays:Lists:Tuples:Vectors/Vectors/: main.rs
Data Structures/Matrix:Grid/: Readme.md
Data Structures/Strings/: main.rs
Design Patterns/: Readme.md
Design Patterns/Patterns/Creational/Factory/: Readme.md
Paradigm/: Variables.md
Problems/: getRange.js
Problems/Process/: Cargo.toml  pyproject.toml
Problems/Process/src/: lib.rs
Problems/Visi/: Cargo.toml
Problems/Visi/src/: main.rs
Trivia/: main.md
