[package]
name = "Library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "library"
path = "Data Structures/Arrays:Lists:Tuples:Vectors/Vectors/main.rs"

[[bin]]
name = "library"
path = "Data Structures/Arrays:Lists:Tuples:Vectors/Vectors/main.rs"